# umlars-backend

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  tox.ini
docs/: index.md
src/: manage.py
src/umlars_app/: admin.py  apps.py  exceptions.py  forms.py  models.py  routers.py  serializers.py  settings.py  urls.py  views.py  viewsets.py
src/umlars_app/fixtures/: uml_models_data.json
src/umlars_app/message_broker/: consumer.py  producer.py
src/umlars_app/migrations/: 0001_initial.py  0002_umlfile_last_process_id.py
src/umlars_app/rest/: permissions.py  routers.py  serializers.py  viewsets.py
src/umlars_app/templates/: base.html  bulk-upload-uml-models.html  change-password.html  home.html  navbar.html  register.html  uml-model.html  update-uml-model.html
src/umlars_app/templatetags/: form_tags.py  iter_tags.py  json_tags.py  status_tags.py
src/umlars_app/utils/: connections_utils.py  files_utils.py  grouping_utils.py  logging.py  translation_utils.py
src/umlars_backend/: asgi.py  settings.py  urls.py  wsgi.py
src/umli_app/: admin.py  apps.py  exceptions.py  forms.py  models.py  routers.py  serializers.py  settings.py  urls.py  views.py  viewsets.py
src/umli_app/fixtures/: uml_models_data.json
src/umli_app/message_broker/: producer.py  utils.py
src/umli_app/migrations/: 0001_initial.py  0002_alter_umlmodelmetadata_metadata.py  (+3 more)
src/umli_backend/: asgi.py  settings.py  urls.py  wsgi.py
tests/umlars_app/: test_forms.py  test_models.py  test_serializers.py  test_views.py  test_viewsets.py
(+29 files in other folders)
